# ror/doc/api/srv/api/swagger.json
@@ -371,7 +371,7 @@
   "name" : "body",
   "required" : true,
   "schema" : {
-    "$ref" : "#/definitions/User"
+    "$ref" : "#/definitions/body"
   }
 }
         
@@ -393,6 +393,35 @@
         ,
         "default": {
   "description" : "Unexpected error",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        
+        
+      }
+    } 
+    
+  } ,
+  
+  "/users/me/videos/unseen": {
+    
+    "get": {
+      "summary": "",
+      "description":"Gets a list of videos unseen by the current user",
+      "x-swagger-router-controller": "Users",
+      "tags": ["Users"],
+      "operationId": "usersMeVideosUnseenGet",
+      "responses": {
+        "200": {
+  "description" : "Unseen videos",
+  "schema" : {
+    "$ref" : "#/definitions/inline_response_200_1"
+  }
+}
+        ,
+        "404": {
+  "description" : "User is not logged in",
   "schema" : {
     "$ref" : "#/definitions/Error"
   }
@@ -443,7 +472,7 @@
   "name" : "body",
   "required" : true,
   "schema" : {
-    "$ref" : "#/definitions/User"
+    "$ref" : "#/definitions/body_1"
   }
 }
         
@@ -483,6 +512,88 @@
       "responses": {
         "204": {
   "description" : "User has been removed"
+}
+        ,
+        "403": {
+  "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"user\"",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        ,
+        "default": {
+  "description" : "Unexpected error",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        
+        
+      }
+    } 
+    
+  } ,
+  
+  "/users/me/videos/liked/{video-id}": {
+    
+    "put": {
+      "summary": "",
+      "description":"Marks a video as liked.",
+      "x-swagger-router-controller": "Users",
+      "tags": ["Users"],
+      "operationId": "usersMeVideosLikedVideoIdPut",
+      "parameters": [
+        {
+  "name" : "video-id",
+  "in" : "path",
+  "description" : "Video ID",
+  "required" : true,
+  "type" : "integer"
+}
+        
+      ],
+      "responses": {
+        "204": {
+  "description" : "Video has been marked as likes"
+}
+        ,
+        "403": {
+  "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"user\"",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        ,
+        "default": {
+  "description" : "Unexpected error",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        
+        
+      }
+    } ,
+    
+    "delete": {
+      "summary": "",
+      "description":"Removes a like on a video.",
+      "x-swagger-router-controller": "Users",
+      "tags": ["Users"],
+      "operationId": "usersMeVideosLikedVideoIdDelete",
+      "parameters": [
+        {
+  "name" : "video-id",
+  "in" : "path",
+  "description" : "Video ID",
+  "required" : true,
+  "type" : "integer"
+}
+        
+      ],
+      "responses": {
+        "204": {
+  "description" : "Like has been removed"
 }
         ,
         "403": {
@@ -554,7 +665,7 @@
   "name" : "body",
   "required" : true,
   "schema" : {
-    "$ref" : "#/definitions/User"
+    "$ref" : "#/definitions/body_2"
   }
 },
         {
@@ -594,14 +705,14 @@
     
   } ,
   
-  "/users/me/videos/likes": {
+  "/users/me/videos/liked": {
     
     "get": {
       "summary": "",
       "description":"Gets a list of videos liked by the current user",
       "x-swagger-router-controller": "Users",
       "tags": ["Users"],
-      "operationId": "usersMeVideosLikesGet",
+      "operationId": "usersMeVideosLikedGet",
       "responses": {
         "200": {
   "description" : "Liked videos",
@@ -612,6 +723,150 @@
         ,
         "404": {
   "description" : "User is not logged in",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        
+        
+      }
+    } 
+    
+  } ,
+  
+  "/users/me/videos/skipped": {
+    
+    "get": {
+      "summary": "",
+      "description":"Gets a list of videos skipped by the current user",
+      "x-swagger-router-controller": "Users",
+      "tags": ["Users"],
+      "operationId": "usersMeVideosSkippedGet",
+      "responses": {
+        "200": {
+  "description" : "Skipped videos",
+  "schema" : {
+    "$ref" : "#/definitions/inline_response_200_1"
+  }
+}
+        ,
+        "404": {
+  "description" : "User is not logged in",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        
+        
+      }
+    } 
+    
+  } ,
+  
+  "/users/me/videos/skipped/{video-id}": {
+    
+    "put": {
+      "summary": "",
+      "description":"Marks a video as skipped.",
+      "x-swagger-router-controller": "Users",
+      "tags": ["Users"],
+      "operationId": "usersMeVideosSkippedVideoIdPut",
+      "parameters": [
+        {
+  "name" : "video-id",
+  "in" : "path",
+  "description" : "Video ID",
+  "required" : true,
+  "type" : "integer"
+}
+        
+      ],
+      "responses": {
+        "204": {
+  "description" : "Video has been marked as skipped"
+}
+        ,
+        "403": {
+  "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"user\"",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        ,
+        "default": {
+  "description" : "Unexpected error",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        
+        
+      }
+    } 
+    
+  } ,
+  
+  "/users/me/videos/seen": {
+    
+    "get": {
+      "summary": "",
+      "description":"Gets a list of videos seen by the current user",
+      "x-swagger-router-controller": "Users",
+      "tags": ["Users"],
+      "operationId": "usersMeVideosSeenGet",
+      "responses": {
+        "200": {
+  "description" : "Seen videos",
+  "schema" : {
+    "$ref" : "#/definitions/inline_response_200_1"
+  }
+}
+        ,
+        "404": {
+  "description" : "User is not logged in",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        
+        
+      }
+    } 
+    
+  } ,
+  
+  "/users/me/videos/seen/{video-id}": {
+    
+    "put": {
+      "summary": "",
+      "description":"Marks a video as seen. The video&#39;s skipped parameter will be set to false and removed from the skipped resource if present.",
+      "x-swagger-router-controller": "Users",
+      "tags": ["Users"],
+      "operationId": "usersMeVideosSeenVideoIdPut",
+      "parameters": [
+        {
+  "name" : "video-id",
+  "in" : "path",
+  "description" : "Video ID",
+  "required" : true,
+  "type" : "integer"
+}
+        
+      ],
+      "responses": {
+        "204": {
+  "description" : "Video has been marked as seen."
+}
+        ,
+        "403": {
+  "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"user\"",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        ,
+        "default": {
+  "description" : "Unexpected error",
   "schema" : {
     "$ref" : "#/definitions/Error"
   }
@@ -715,7 +970,7 @@
   "name" : "body",
   "required" : true,
   "schema" : {
-    "$ref" : "#/definitions/body_1"
+    "$ref" : "#/definitions/body_4"
   }
 },
         {
@@ -885,7 +1140,7 @@
   "name" : "body",
   "required" : true,
   "schema" : {
-    "$ref" : "#/definitions/body"
+    "$ref" : "#/definitions/body_3"
   }
 }
         
@@ -900,88 +1155,6 @@
         ,
         "403": {
   "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"admin\"",
-  "schema" : {
-    "$ref" : "#/definitions/Error"
-  }
-}
-        ,
-        "default": {
-  "description" : "Unexpected error",
-  "schema" : {
-    "$ref" : "#/definitions/Error"
-  }
-}
-        
-        
-      }
-    } 
-    
-  } ,
-  
-  "/videos/{video-id}/like": {
-    
-    "put": {
-      "summary": "",
-      "description":"Set a like on a video.",
-      "x-swagger-router-controller": "Videos",
-      "tags": ["Videos"],
-      "operationId": "videosVideoIdLikePut",
-      "parameters": [
-        {
-  "name" : "video-id",
-  "in" : "path",
-  "description" : "Video ID",
-  "required" : true,
-  "type" : "integer"
-}
-        
-      ],
-      "responses": {
-        "204": {
-  "description" : "Video has been liked"
-}
-        ,
-        "403": {
-  "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"user\"",
-  "schema" : {
-    "$ref" : "#/definitions/Error"
-  }
-}
-        ,
-        "default": {
-  "description" : "Unexpected error",
-  "schema" : {
-    "$ref" : "#/definitions/Error"
-  }
-}
-        
-        
-      }
-    } ,
-    
-    "delete": {
-      "summary": "",
-      "description":"Remove a like on a video.",
-      "x-swagger-router-controller": "Videos",
-      "tags": ["Videos"],
-      "operationId": "videosVideoIdLikeDelete",
-      "parameters": [
-        {
-  "name" : "video-id",
-  "in" : "path",
-  "description" : "Video ID",
-  "required" : true,
-  "type" : "integer"
-}
-        
-      ],
-      "responses": {
-        "204": {
-  "description" : "Like has been removed"
-}
-        ,
-        "403": {
-  "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"user\"",
   "schema" : {
     "$ref" : "#/definitions/Error"
   }
@@ -1232,6 +1405,18 @@
       "readOnly" : true,
       "default" : false
     },
+    "seen" : {
+      "type" : "boolean",
+      "description" : "Boolean representing whether the current user has seen the video. This property is always false for unauthenticated clients.",
+      "readOnly" : true,
+      "default" : false
+    },
+    "skipped" : {
+      "type" : "boolean",
+      "description" : "Boolean representing whether the current user has skipped the video. This property is always false for unauthenticated clients.",
+      "readOnly" : true,
+      "default" : false
+    },
     "view_count" : {
       "type" : "integer",
       "format" : "int32",
@@ -1333,6 +1518,27 @@
     }
   }
 },"body": {
+  "type" : "object",
+  "properties" : {
+    "user" : {
+      "$ref" : "#/definitions/User"
+    }
+  }
+},"body_1": {
+  "type" : "object",
+  "properties" : {
+    "user" : {
+      "$ref" : "#/definitions/User"
+    }
+  }
+},"body_2": {
+  "type" : "object",
+  "properties" : {
+    "user" : {
+      "$ref" : "#/definitions/User"
+    }
+  }
+},"body_3": {
   "required" : [ "category_id", "description", "mpaa_rating", "title" ],
   "properties" : {
     "title" : {
@@ -1427,7 +1633,7 @@
       "description" : "Upload policy"
     }
   }
-},"body_1": {
+},"body_4": {
   "properties" : {
     "key" : {
       "type" : "string",
