# ror/doc/api/srv/controllers/TrendingService.js
@@ -11,13 +11,15 @@ exports.trendingGet = function() {
       "link" : "aeiou",
       "stream_type" : "aeiou"
     } ],
-    "created_at" : "2016-01-05T03:07:24.367+0000",
+    "created_at" : "2016-01-06T00:23:17.726+0000",
     "description" : "aeiou",
     "title" : "aeiou",
     "liked" : true,
+    "seen" : true,
     "tags" : [ "aeiou" ],
+    "skipped" : true,
     "viewable" : true,
-    "updated_at" : "2016-01-05T03:07:24.367+0000",
+    "updated_at" : "2016-01-06T00:23:17.726+0000",
     "category_id" : 123,
     "id" : 123,
     "hero_image_link" : "aeiou",
